package com.HailoOSS.kernel.provisioningmanager.runlevels;

import "github.com/HailoOSS/provisioning-manager-service/proto/levels.proto";

message ServiceRunLevels {
	required string serviceName = 1;
	repeated provisioningmanager.Level levels = 2;
}

message Request {
	optional string serviceName = 1;
}

message Response {
	repeated ServiceRunLevels serviceRunLevels = 1;
}
